fix/overflow-x-hide

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -4,3 +4,7 @@
   padding: 2rem;
   text-align: center;
 }
+
+.scrollOff {
+  overflow-y: hidden;
+}
