--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@
 body {
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1,
